--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <h2>Capital of Europe</h2>
     <footer>
       This project was coded by Anush Arutunian is
-      <a href="https://github.com/Anush199530/add-on-travel" target="_blank"
+      <a href="https://github.com/Anush199530/add-on-project" target="_blank"
         >open sourced</a
+      >
+      and on
+      <a href="https://github.com/Anush199530/add-on-project" target="_blank"
+        >Vercel</a
       >
     </footer>
   </body>
