--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
   <title>Welcome to Brussels</title>
   <style></style>
   <body>
-    <h1>Welcome to Brussels</h1>
-    <h2>Capital of Europe</h2>
-    <footer>
-      This project was coded by Anush Arutunian is
-      <a href="https://github.com/Anush199530/add-on-project" target="_blank"
-        >open sourced</a
-      >
-      and on
-      <a href="https://github.com/Anush199530/add-on-project" target="_blank"
-        >Vercel</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Brussels</h1>
+        <h2>Capital of Europe</h2>
+        <a href="#"> Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Anush Arutunian is
+        <a href="https://github.com/Anush199530/add-on-project" target="_blank"
+          >open sourced</a
+        >
+        and on
+        <a href="#" target="_blank">Vercel</a>
+      </footer>
+    </div>
   </body>
 </html>
