added the footer

--- a/index.html
+++ b/index.html
@@ -18,16 +18,61 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Brussels</h1>
         <h2>Capital of Europe</h2>
-        <a href="#"> Learn more</a>
+        <a href="https://add-on-project-cc2g-git-master-anush199530.vercel.app/"> Learn more</a>
       </header>
       <footer>
-        This project was coded by Anush Arutunian is
-        <a href="https://github.com/Anush199530/add-on-project" target="_blank"
-          >open sourced</a
-        >
-        and on
-        <a href="#" target="_blank">Vercel</a>
+        <section class="grid">
+        <div>
+          <h3>More about Brussels</h3>
+          <ul>
+            <li>
+              <a
+                href="https://www.brusselsairlines.com/be/nl/homepage"
+                target="_blank"
+              >
+                Brussel airports website
+              </a>
+            </li>
+            <li>
+              <a href="https://www.brussels.be/map-brussels" target="_blank"
+                >Map of Brussels</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.stib-mivb.be/article.html?l=en&_guid=00266bf9-0883-3410-bc80-cd51a4d340c3#contentBodyList0"
+                target="_blank"
+              >
+                Public transport map
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Nestled in Brussels, a city blending historic charm and modernity,
+            I'm immersed in a project for SheCodes Responsive, honing my coding
+            skills. From exploring diverse neighborhoods to savoring Belgian
+            delights, Brussels enriches my daily life, offering a dynamic
+            backdrop to my coding journey.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            This project was coded by Anush Arutunian is
+            <a
+              href="https://github.com/Anush199530/add-on-project"
+              target="_blank"
+              >open sourced</a
+            >
+            and on
+            <a href="#" target="_blank">Vercel</a>
+          </p>
+        </div>
+        </section>
       </footer>
-    </div>
+   
   </body>
 </html>
