--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Brussels</h1>
-        <h2>Capital of Europe</h2>
+        <h2>Capital of the European Union</h2>
         <a href="https://add-on-project-cc2g-git-master-anush199530.vercel.app/"> Learn more</a>
       </header>
       <footer>
@@ -68,7 +68,7 @@
               >open sourced</a
             >
             and on
-            <a href="#" target="_blank">Vercel</a>
+            <a href="https://add-on-project-cc2g.vercel.app/" target="_blank">Vercel</a>
           </p>
         </div>
         </section>
