added the main section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   />
   <link rel="stylesheet" href="src/styles.css" />
   <title>Welcome to Brussels</title>
-  <style></style>
+
   <body>
+
     <div class="container">
       <header>
         <h3>.TRAVEL.</h3>
@@ -20,8 +21,34 @@
         <h2>Capital of the European Union</h2>
         <a href="https://add-on-project-cc2g-git-master-anush199530.vercel.app/"> Learn more</a>
       </header>
+<main>
+
+    <section class="grid grid-2-colums">
+<img src="images/brussel-6.jpg" alt="Brussels manneke pis">
+<div>
+<h2>Why Brussel?</h2>
+<h3>Bridging History and Modernity in the Heart of Europe</h3>
+
+<p>
+Brussels, the capital of Belgium and the de facto capital of the European Union, stands as a captivating fusion of historical grandeur and contemporary vitality. Steeped in medieval charm, the cityscape is adorned with iconic landmarks such as the Atomium and the medieval splendor of the Grand Place, a UNESCO World Heritage site surrounded by ornate guildhalls. The cobblestone streets whisper tales of centuries past, weaving a narrative of resilience and evolution.
+Beyond its architectural marvels, Brussels pulsates with the beat of European politics, hosting the headquarters of both the European Union and NATO. This political significance adds a unique layer to the city's identity, making it a pivotal hub in the global landscape.
+</p>
+<p>
+Yet, Brussels is not just a canvas for politics and history; it is a cultural mosaic. The air is infused with the tempting aroma of Belgian waffles, and the city's vibrant cultural scene beckons exploration. Art museums, galleries, and theaters showcase a rich heritage of creativity. Amidst this cultural tapestry, the Brussels lifestyle unfolds with leisurely strolls through parks, lively markets, and the enjoyment of culinary delights.
+
+Brussels is not merely a destination; it's an experience that seamlessly blends the echoes of the past with the rhythms of the present. The city welcomes visitors with open arms, offering a harmonious symphony of political significance, artistic allure, and the sheer delight of exploring its picturesque streets.
+
+
+</p>
+</div>
+
+</section>
+
+
+</main>
+
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-colums">
         <div>
           <h3>More about Brussels</h3>
           <ul>
