added the cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="src/styles.css" />
+  <link rel="stylesheet" href="src/styles.css"class="img-responsive" />
   <title>Welcome to Brussels</title>
 
   <body>
@@ -43,12 +43,86 @@ Brussels is not merely a destination; it's an experience that seamlessly blends 
 </div>
 
 </section>
+<section class="secondary">
+    <h2 class="text-center"> Activieties</h2>
+    <h3 class="text-center">Top 3 things to do in Brussel </h3>
+<div class="grid grid-3-colums">
+
+<div class="card">
+    <div class="card-header">
+    <img src="images/brussel-2.jpg" alt="Grand Place" class="img-responsive"/>
+    </div>
+    <div class="card-body">
+    <h4>Grand Place </h4>
+<p>
+ 
+Grand Place, a UNESCO World Heritage site in Brussels, enchants with ornate guildhalls surrounding a historic square of timeless beauty.   
+</p>
+<h5>Adress:</h5>
+<p>Grand Place, 1000 Brussels </p>
+<h5> What I like about it</h5>
+<p> 
+    Timeless beauty, ornate guildhalls, captivating history—every visit unfolds new wonders.
+</p>
+   <div class="card-footer">
+   <a href="https://maps.app.goo.gl/C4zUPuAGbmyt9NxMA" class="btn" target="_blank">Learn More</a>    
+   </div> 
+</div>
+</div>
+<div class="card">
+    <div class="card-header">
+    <img src="images/brussel-7.jpg" alt="Les Galeries Royales Saint-Hubert" class="img-responsive"/>
+    </div>
+    <div class="card-body">
+    <h4>Les Galeries Royales Saint-Hubert </h4>
+<p>
+  Elegant shopping arcade in Brussels, blending historic charm with luxury boutiques and delightful cafes.</p>
+<h5>Adress:</h5>
+<p>Galerie du Roi 5 Galeries Royales Saint-Hubert, Brussels 1000 Belgium </p>
+<h5> What I like about it</h5>
+<p> 
+    Enchanting arcade, historic charm, upscale boutiques, and inviting cafes create a sophisticated ambiance for a delightful shopping experience.
+</p>
+   <div class="card-footer">
+   <a href="https://maps.app.goo.gl/4AKYTszzbBrDVG4c7" class="btn" target="_blank">Learn More</a>    
+   </div> 
+</div>
+</div>
+<div class="card">
+    <div class="card-header">
+    <img src="images/brussel-8.jpg" alt="St. Michael and St. Gudula Cathedral (Cathedrale St-Michel et Ste-Gudule)" class="img-responsive"/>
+    </div>
+    <div class="card-body">
+    <h4>St. Michael and St. Gudula Cathedral </h4>
+<p>
+ 
+Gothic splendor and intricate stained glass define Brussels' majestic cathedral, a testament to architectural grandeur and historical significance.</p>
+<h5>Adress:</h5>
+<p>Parvis Sainte-Gudule Treurenberg Hill, Brussels 1000 Belgium </p>
+<h5> What I like about it</h5>
+<p> 
+   Cathedral charm: Gothic grace, stunning stained glass, historical reverence captivates every visitor.
+</p>
+   <div class="card-footer">
+   <a href="https://maps.app.goo.gl/hSoMLRVYz6JRN8sE6" class="btn" target="_blank">Learn More</a>    
+   </div> 
+</div>
+</div>
+
+
+</div>
+<section class="card-more-activities">
+    <div class="more-activities">
+   <a href="https://www.tripadvisor.com/Attractions-g188644-Activities-zft11292-Brussels.html" class="btn" target="_blank">Want more activities?</a>    
+   </div> 
+   </section>
+</section>
 
 
 </main>
 
       <footer>
-        <section class="grid grid-3-colums">
+        <section class="grid grid-3-colums-first">
         <div>
           <h3>More about Brussels</h3>
           <ul>
