added google maps

--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@ Brussels is not merely a destination; it's an experience that seamlessly blends 
 <div class="grid grid-3-colums">
 
 <div class="card">
-    <div class="card-header">
-    <img src="images/brussel-2.jpg" alt="Grand Place" class="img-responsive"/>
-    </div>
+    <div class="card-header grid grid-2-colums">
+    <img src="images/brussel-9.jpg" alt="Grand Place" class="img-responsive"/>
+    
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.1563625743515!2d4.352435600000001!3d50.8467887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47f4614f1f1%3A0xb03c355d8fe2cfb6!2sGrote%20Markt!5e0!3m2!1snl!2sbe!4v1706467798469!5m2!1snl!2sbe" 
+    class="embed" 
+    style="border: 0;"
+     allowfullscreen=""
+      loading="lazy"
+       referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </div>
     <div class="card-body">
     <h4>Grand Place </h4>
 <p>
@@ -65,13 +72,16 @@ Grand Place, a UNESCO World Heritage site in Brussels, enchants with ornate guil
     Timeless beauty, ornate guildhalls, captivating history—every visit unfolds new wonders.
 </p>
    <div class="card-footer">
-   <a href="https://maps.app.goo.gl/C4zUPuAGbmyt9NxMA" class="btn" target="_blank">Learn More</a>    
+   <a href="https://maps.app.goo.gl/C4zUPuAGbmyt9NxMA" class="btn" target="_blank">Learn More</a> 
+      
    </div> 
 </div>
 </div>
 <div class="card">
-    <div class="card-header">
-    <img src="images/brussel-7.jpg" alt="Les Galeries Royales Saint-Hubert" class="img-responsive"/>
+    <div class="card-header grid grid-2-colums">
+    <img src="images/brussel-7.png" alt="Les Galeries Royales Saint-Hubert" class="img-responsive"/>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.0864595224034!2d4.355250600000001!3d50.8480832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47f6ec755bb%3A0x131e072ac2a7d730!2sKoninklijke%20Sint-Hubertusgalerijen!5e0!3m2!1snl!2sbe!4v1706468496472!5m2!1snl!2sbe" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </div>
     <div class="card-body">
     <h4>Les Galeries Royales Saint-Hubert </h4>
@@ -89,9 +99,11 @@ Grand Place, a UNESCO World Heritage site in Brussels, enchants with ornate guil
 </div>
 </div>
 <div class="card">
-    <div class="card-header">
+    <div class="card-header grid grid-2-colums">
     <img src="images/brussel-8.jpg" alt="St. Michael and St. Gudula Cathedral (Cathedrale St-Michel et Ste-Gudule)" class="img-responsive"/>
-    </div>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.09590573434!2d4.3575747765807415!3d50.847908271670846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c37fff7836bd%3A0x84857a9ed38423cd!2sSt-Michiels%20en%20St-Goedelekathedraal%20Brussel!5e0!3m2!1snl!2sbe!4v1706468884561!5m2!1snl!2sbe" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</div>
     <div class="card-body">
     <h4>St. Michael and St. Gudula Cathedral </h4>
 <p>
