--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Brussels</h1>
         <h2>Capital of the European Union</h2>
-        <a href="https://add-on-project-cc2g-git-master-anush199530.vercel.app/"> Learn more</a>
+        <a href="#more"> Learn more</a>
       </header>
 <main>
 
     <section class="grid grid-2-colums">
 <img src="images/brussel-6.jpg" alt="Brussels manneke pis">
 <div>
+    <a name="more"></a>
 <h2>Why Brussel?</h2>
 <h3>Bridging History and Modernity in the Heart of Europe</h3>
 
